@@ -173,6 +173,10 @@ case "$host" in
         AC_DEFINE(HAVE_IRIX_IEEE_INTERFACE)
         AC_MSG_RESULT([irix]) 
         ;;
+    *-*-*bsd*) 
+        AC_DEFINE(HAVE_FREEBSD_IEEE_INTERFACE)
+        AC_MSG_RESULT([freebsd]) 
+        ;;
     *)
         AC_MSG_RESULT([unknown])
         ;;
@@ -317,4 +321,4 @@ else
 fi
 
 dnl
-AC_OUTPUT(gsl-config gsl_version.h gsl/Makefile test/Makefile err/Makefile sys/Makefile utils/Makefile min/Makefile multimin/Makefile ieee-utils/Makefile fft/Makefile specfunc/Makefile dht/Makefile statistics/Makefile sum/Makefile roots/Makefile multiroots/Makefile poly/Makefile qrng/Makefile rng/Makefile randist/Makefile siman/Makefile integration/Makefile interpolation/Makefile doc/Makefile block/Makefile vector/Makefile matrix/Makefile histogram/Makefile monte/Makefile ode-initval/Makefile blas/Makefile linalg/Makefile eigen/Makefile permutation/Makefile sort/Makefile complex/Makefile Makefile)
+AC_OUTPUT(gsl-config gsl_version.h gsl/Makefile test/Makefile err/Makefile sys/Makefile utils/Makefile min/Makefile multimin/Makefile ieee-utils/Makefile fft/Makefile specfunc/Makefile dht/Makefile fit/Makefile statistics/Makefile sum/Makefile roots/Makefile multiroots/Makefile poly/Makefile qrng/Makefile rng/Makefile randist/Makefile siman/Makefile integration/Makefile interpolation/Makefile doc/Makefile block/Makefile vector/Makefile matrix/Makefile histogram/Makefile monte/Makefile ode-initval/Makefile blas/Makefile linalg/Makefile eigen/Makefile permutation/Makefile sort/Makefile complex/Makefile Makefile)
