@@ -1,3 +1,8 @@
+Thu Jul 20 19:41:56 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fp-freebsd.c (gsl_ieee_set_mode): added fp-freebsd.c from
+ 	Vladimir Kushnir
+
 Mon Jun 12 19:23:53 2000  Brian Gough  <bjg@network-theory.co.uk>
 
 	* Makefile.am (noinst_HEADERS): added aix and irix to makefile
